Fixed height pane 2 rows: hover overflow

--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -145,6 +145,7 @@ table#reportData tr.rowa td {
 .in_cell:hover {
 	background-color: white;
 	overflow:visible;
+	text-shadow: white 0px 0px 10px;
 }
 
 table#reportData tr.rowb  { 
